Wed Sep 26 23:04:04 2001  George Lebl <jirka@5z.com>

	* gnome-ditem-edit.[ch]:  Add a _set_editable call which makes
	  the entry editable or not.  Useful for read only items.  Currently
	  a stupid implementation.

2001-09-25  Darin Adler  <darin@bentspoon.com>

	* gnome-desktop-item.c: (gnome_desktop_item_launch): Update
	calls for change in gnome_url_show API.

Fri Sep 21 12:14:06 2001  George Lebl <jirka@5z.com>

	* gnome-desktop-item.h: include gobject/gtype.h

	* gnome-ditem-edit.[ch]: include evil api to grab focus, to be
	  replaced by a correct way to do this in the future.

2001-09-21  Glynn Foster <glynn.foster@sun.com>

	* test-ditem.c: (test_ditem): Fix up this to pass the right 
	  number of args to gnome_desktop_item_get_type () and 
          gnome_desktop_item_set_localestring ()

Thu Sep 20 16:38:11 2001  George Lebl <jirka@5z.com>

	* gnome-desktop-item.[ch]: make sure name/encoding/version are set,
	  location return is now const, and some better checks.  Also fix
	  saving 'under' and some 'modified' logic

	* gnome-ditem-edit.h: fix comment

Thu Sep 20 15:15:54 2001  George Lebl <jirka@5z.com>

	* gnome-desktop-item.[ch]: string vector const weirdness removed

Wed Sep 19 01:42:13 2001  George Lebl <jirka@5z.com>

	* gnome-desktop-item.c, gnome-ditem-edit.c: eeek, exported an
	  internal function.

Tue Sep 18 23:11:33 2001  George Lebl <jirka@5z.com>

	* gnome-desktop-item.[ch]: Few more accessors, whack the push/pop
	  of sections.  Keys can now include sections, add actual error
	  returns

	* gnome-ditem-edit.[ch]: whack crack entries, make compile, and port
	  to new desktop item.

	* Makefile.am: add the ditem-edit

Sat Sep 08 01:55:29 2001  George Lebl <jirka@5z.com>

	* All bonobo stuff.  Removed for now.  This is in bonobo somewhere
	  now anyway.

	* Makefile.am: Fixup for the current no-bonobo build

	* gnome-desktop-item.[ch], test-ditem.c:  Made loading/saving work
	  and add tests
