@@ -1,3 +1,8 @@
+2001-10-09  Havoc Pennington  <hp@redhat.com>
+
+	* gnome-desktop-item.c (gnome_desktop_item_new): create the hash
+	table here, since we use it and assume it's always non-nul
+
 Wed Sep 26 23:04:04 2001  George Lebl <jirka@5z.com>
 
 	* gnome-ditem-edit.[ch]:  Add a _set_editable call which makes
